# lie-detector

./: LICENSE  LieDetector.cabal  README.md
src/: LieDetector.hs  Main.hs
src/LieDetector/: Evaluator.hs  Lexer.hs  Parser.hs
