name:                LieDetector
version:             0.1.0.0
synopsis:            Evaluating logical statements
description:         Propositional Logic Calculator
homepage:            https://github.com/lukebfox/lie-detector#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Bentley-Fox
maintainer:          lbentley-fox1@sheffield.ac.uk
copyright:           Luke Bentley-Fox
category:            Haskell
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lie-detector
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       LieDetector,
                       LieDetector.Lexer,
                       LieDetector.Parser,
                       LieDetector.Evaluator
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers
